[package]
name = "uniffi-math"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "math" # This is our crate name in this tutorial

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.28.3" }

[build-dependencies]
uniffi = { version = "0.28.3", features=["build"] }

